# DockerMap

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_SUMMARY.md  DESIGN.md  Dockerfile  PAGE_LOGIC.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
.codex/agents/: api-contracts.toml  compose-core.toml  docs-operator.toml  frontend-topology.toml  issue-steward.toml  qa-evidence.toml  release-ops.toml  runtime-provider.toml  security-readonly.toml
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: agent_pass.yml  bug_report.yml  config.yml  feature_request.yml  release_evidence.yml
.github/workflows/: ci.yml
apps/api/: package.json  tsconfig.json
apps/web/: index.html  package.json  vite.config.ts
crates/: Cargo.toml
crates/dockermap-core/: Cargo.toml
crates/dockermap-daemon/: Cargo.toml
crates/dockermap-daemon/src/: main.rs
deploy/docker/: entrypoint.sh  nginx.conf
deploy/nginx/: dockermap.conf
deploy/systemd/: dockermap-api.service  dockermap-daemon.service
dockermap/: mockup.py  service.py  store.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_LANGUAGE.md  DOC_CONTROL.md  IMPLEMENTATION_PLAN.md  MARKET_RESEARCH.md  README.md  RELEASE_CHECKLIST.md  REVERSE_PROXY.md  TESTING_PLAN.md  THREAT_MODEL.md
docs/architecture/: ARCHITECTURE.md
docs/ci/: github-actions-ci.yml
docs/deployment/: DEPLOYMENT.md  DOCKER.md  REVERSE_PROXY.md
docs/design/: DESIGN.md  DESIGN_LANGUAGE.md
scripts/: dockermap-fixture-down.sh  dockermap-fixture-up.sh  run-dev-stack.sh  smoke-deploy.sh
(+103 files in other folders)
