[package]
name = "dockermap-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dockermap-daemon"
path = "src/main.rs"

[dependencies]
axum = "0.8"
bollard = "0.19"
dockermap-core = { path = "../dockermap-core" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
